# kaburimake-checker-utils-rs

./: Cargo.toml  README.md
src/: ast.rs  config.rs  io.rs  main.rs  procedure.rs
src/procedure/: append.rs  build.rs  erase.rs  merge.rs
test_target/descript/invalid/: eucjp_but-other-note.txt  shiftjis_but-other-note.txt  utf8_but-other-note.txt
test_target/descript/valid/: eucjp.txt  shiftjis.txt  utf8.txt
test_target/ghost/invalid/aaa/: install.txt
test_target/ghost/invalid/aaa/ghost/master/: descript.txt
test_target/ghost/invalid/bbb/ghost/master/: descript.txt
test_target/ghost/invalid/ccc/: install.txt
test_target/ghost/valid/aaa/: install.txt
test_target/ghost/valid/aaa/ghost/master/: descript.txt
test_target/ghost/valid/bbb/: install.txt
test_target/ghost/valid/bbb/ghost/master/: descript.txt
test_target/ghost/valid/ccc/ghost/master/: descript.txt
test_target/json/invalid/: no-ghostList.json  no-update.json
